fix: Убрать flex-gap

--- a/blocks/category/category.css
+++ b/blocks/category/category.css
@@ -6,8 +6,26 @@
   align-items: center;
   width: 152px;
   height: 142px;
+  margin-right: 24px;
+  margin-bottom: 24px;
   border: none;
   border-radius: 10px;
   background-color: #c4c4c4;
   outline: none;
+}
+
+.category:nth-of-type(3) {
+  margin: 0;
+}
+
+.category:nth-of-type(4) {
+  margin-bottom: 0;
+}
+
+.category:nth-of-type(5) {
+  margin-bottom: 0;
+}
+
+.category:nth-of-type(6) {
+  margin: 0;
 }
